--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,6 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import "tailwindcss";
+
+@plugin "daisyui" {
+  themes: cupcake --default, light, dark, aqua, autumn, business, acid, lemonade, night, coffee, winter, dim, nord, sunset, procyon, cyberpunk, valentine, halloween, garden, forest, lofi, pastel, fantasy, wireframe, black, luxury, dracula, cmyk, emerald, corporate, synthwave, retro, bumblebee;
+  logs: true;
+}
